--- a/src/main/resources/templates/TagsView.html
+++ b/src/main/resources/templates/TagsView.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="../static/Styles.css" th:href="@{/Styles.css}" rel="stylesheet"/>
 </head>
 <body>
+<ul>
+    <li><h3><a href="/" th:text="#{navigation.home}">Front page</a></h3></li>
+</ul>
+
+<div th:if="${tags.isEmpty()}">
+    <h2 th:text="#{tags.name.empty}">No Tags</h2>
+</div>
+
+
+<div th:unless="${tags.isEmpty()}">
+    <h2 th:text="#{tags.name.empty}">Listing all tags</h2>
+    <div class="table">
+        <div class="header">
+            <div class="cell" th:text="#{tags.id}">Tag id</div>
+            <div class="cell" th:text="#{tags.name}">Tag name</div>
+            <div class="cell" th:text="#{tags.creator}">Creator</div>
+        </div>
+        <div class="row" th:each="tag : ${tags}">
+            <div class="cell">
+                <a href="#" th:href="@{/tags/{id}(id=${tag.getId()})}" th:text="${tag.getId()}">Tag</a>
+            </div>
+            <div class="cell" th:text="${tag.getName()}"> </div>
+            <div class="cell" th:text="${tag.getBelongs_to().getUsername()}"> </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
