--- a/src/main/resources/templates/TagsView.html
+++ b/src/main/resources/templates/TagsView.html
@@ -16,7 +16,7 @@
 
 
 <div th:unless="${tags.isEmpty()}">
-    <h2 th:text="#{tags.name.empty}">Listing all tags</h2>
+    <h2 th:text="#{tags.name.allTags}">Listing all tags</h2>
     <div class="table">
         <div class="header">
             <div class="cell" th:text="#{tags.id}">Tag id</div>
