Tag "occurance_in" removed from object

--- a/src/main/resources/templates/TagsView.html
+++ b/src/main/resources/templates/TagsView.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Forum tag list</title>
     <link href="../static/Styles.css" th:href="@{/Styles.css}" rel="stylesheet"/>
 </head>
 <body>
