Fix: improper pagination result return

--- a/src/main/resources/templates/NotFoundView.html
+++ b/src/main/resources/templates/NotFoundView.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>We didn`t find what you were looking for...</title>
 </head>
 <body>
 
