--- a/src/main/resources/templates/NotFoundView.html
+++ b/src/main/resources/templates/NotFoundView.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>We didn`t find what you were looking for...</title>
 </head>
 <body>
+<h2 th:text="#{error.not-found}">We didn`t find what you were looking for...</h2>
 
 </body>
 </html>
