Make not found view red

--- a/src/main/resources/templates/NotFoundView.html
+++ b/src/main/resources/templates/NotFoundView.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>We didn`t find what you were looking for...</title>
+    <link href="../static/Styles.css" th:href="@{/Styles.css}" rel ="stylesheet"/>
 </head>
 <body>
 <h2 th:text="#{error.not-found}">We didn`t find what you were looking for...</h2>
-
+<h3 class = "error" th:text="${error}">Error placeholder</h3>
 </body>
 </html>
