Thymeleaf theme applied, HomeMVC example set up on Tags

--- a/src/main/resources/templates/TopicsView.html
+++ b/src/main/resources/templates/TopicsView.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>All Topics</title>
-    <link href="../static/Styles.css" th:href="@{/Styles.css}" rel="stylesheet"/>
+    <link href="../static/StylesOldy.css" th:href="@{/StylesOldy.css}" rel="stylesheet"/>
 </head>
 
 
