--- a/src/main/resources/templates/TagsView.html
+++ b/src/main/resources/templates/TagsView.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Forum tag list</title>
-    <link href="../static/Styles.css" th:href="@{/Styles.css}" rel="stylesheet"/>
+    <link href="../static/StylesOldy.css" th:href="@{/StylesOldy.css}" rel="stylesheet"/>
 </head>
 <body>
 <ul>
