Getting top 10 recent tags for homepage by new method

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                <a class="navbar-brand" href="#"><img src="../static/assets/img/logo.png" alt="Logo"></a>
+                <a class="navbar-brand" href="#"><img src="../static/assets/img/logo.png" alt="Logo" th:href="@{/assets/img/logo.png}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -1756,7 +1756,8 @@
                 <!--        start recent post  -->
                 <div class="recent-post3290">
                     <h4>Recent Post</h4>
-                    <div class="post-details021"> <a href="#"><h5>How much do web developers</h5></a>
+                    <div class="post-details021">
+                        <a href="#"><h5>How much do web developers</h5></a>
                         <p>I am thinking of pursuing web developing as a career & was ...</p> <small style="color: #848991">July 16, 2017</small> </div>
                     <hr>
                     <div class="post-details021"> <a href="#"><h5>How much do web developers</h5></a>
@@ -1827,7 +1828,7 @@
                     <a href="#">
                         <p>-Contact Us</p>
                     </a>
-                    <a href="#" class="last-child12892">
+                    <a href="contact_us.html" class="last-child12892">
                         <p>-Buy now</p>
                     </a>
                 </div>
@@ -1867,7 +1868,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <p>Copyright 2017 Ask me | <strong>Sudo  Coder</strong></p>
+                <p>Copyright 2023 - Sex forums | <strong>Team 10 @ Telerik A48 Java Cohort</strong></p>
             </div>
             <div class="col-md-6">
                 <div class="social-right2389"> <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a> </div>
