--- a/src/main/resources/templates/logIn.html
+++ b/src/main/resources/templates/logIn.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="title" content="Ask online Form">
+  <meta name="title" content="Forum log in page">
   <meta name="description" content="The Ask is a bootstrap design help desk, support forum website template coded and designed with bootstrap Design, Bootstrap, HTML5 and CSS. Ask ideal for wiki sites, knowledge base sites, support forum sites">
   <meta name="keywords" content="Sex forum">
   <meta name="robots" content="index, nofollow">
