--- a/src/main/resources/templates/contact_us.html
+++ b/src/main/resources/templates/contact_us.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Ask online Form">
-    <meta name="description" content="The Ask is a bootstrap design help desk, support forum website template coded and designed with bootstrap Design, Bootstrap, HTML5 and CSS. Ask ideal for wiki sites, knowledge base sites, support forum sites">
-    <meta name="keywords" content="HTML, CSS, JavaScript,Bootstrap,js,Forum,webstagram ,webdesign ,website ,web ,webdesigner ,webdevelopment">
+    <meta name="title" content="Telerik Sex Forums">
+    <meta name="description" content="Bootstrap + Spring Forum with Java">
+    <meta name="keywords" content="Telerik, Sex, Forums">
     <meta name="robots" content="index, nofollow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <!-- <link href="css/animate.css" rel="stylesheet" type="text/css"> -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"> </head>
+    <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <link href="../static/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
+    <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}"> </head>
 
 <body>
     <div class="top-bar">
@@ -23,9 +23,9 @@
                 <div class="col-md-6">
                     <div class="navbar-menu-left-side239">
                         <ul>
-                            <li><a href="contact_us.html" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
-                            <li><a href="#" target="_blank"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                            <li><a href="logIn.html" target="_blank"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
+                                <li><a href="mailto:telerikforums@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
+                                <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
+                                <li><a href="#" th:href="@{/logIn}"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
                         </ul>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                    <a class="navbar-brand" href="#"><img src="image/logo.png" alt="Logo"></a>
+                    <a class="navbar-brand" href="#"><img src="/assets/img/flogo.png" alt="FLogo"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -107,7 +107,7 @@
 </section>
      <section class="google-map390">
      <div class="container">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.3606635504457!2d90.31952411441043!3d23.876826289853003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c23e9a9dbe81%3A0x62af421e71601a5f!2sDaffodil+International+University+-+Permanent+Campus+Library!5e0!3m2!1sen!2sbd!4v1510023951587" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2934.5352961774897!2d23.37671767524076!3d42.65001061673528!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40aa86940322e46b%3A0x9dcf2a89d173b821!2z0KLQtdC70LXRgNC40Log0JDQutCw0LTQtdC80LjRjw!5e0!3m2!1sbg!2sbg!4v1690961914595!5m2!1sbg!2sbg" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
          </div>
   </section>
     <section class="main-content920">
@@ -152,22 +152,11 @@
 <!--           strart col-md-3 (side bar)-->
            <aside class="col-md-3 sidebar97239">
              <div class="status-part3821">
-            <h4>stats</h4>
+            <h4>Forum statistics</h4>
                 
                  <a href="#"><i class="fa fa-question-circle" aria-hidden="true"> Question(20)</i></a>
                  <i class="fa fa-comment" aria-hidden="true"> Answers(50)</i>
-             </div>  
-             <div class="categori-part329">
-                 <h4>Category</h4>
-                 <ul>
-                     <li><a href="#">web developer</a></li>
-                     <li><a href="#">Andriod developer</a></li>
-                     <li><a href="#">grapics developer</a></li>
-                     <li><a href="#">web developer</a></li>
-                     
-                 </ul>
              </div>
-             
 <!--             social part -->
               <div class="social-part2189">
               <h4>Find us</h4>
@@ -239,86 +228,6 @@
 								<a href="#" class="resbutton3892">Register</a>
 							</div>
               </div>
-<!--              highest part-->
-              <div class="highest-part302">
-                <h4>Highest Points</h4>  
-                <div class="pints-wrapper">
-                 <div class="left-user3898">
-                     <a href="#"><img src="image/images.png" alt="Image"></a>
-                     <div class="imag-overlay39">
-                         <a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                     </div>
-                 </div>
-                 <span class="points-details938">
-                     <a href="#"><h5>Ahmed Hasan</h5></a>
-                <a href="#" class="designetion439">Pundit</a>
-                     <p>206 points</p>
-                 </span>
-                 
-                  </div>
-                  <hr>
-                           <div class="pints-wrapper">
-                 <div class="left-user3898">
-                     <a href="#"><img src="image/images.png" alt="Image"></a>
-                     <div class="imag-overlay39">
-                         <a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                     </div>
-                 </div>
-                 <span class="points-details938">
-                     <a href="#"><h5>Ahmed Hasan</h5></a>
-                <a href="#" class="designetion439">Pundit</a>
-                     <p>206 points</p>
-                 </span>
-                 
-                  </div>
-                  <hr>
-                           <div class="pints-wrapper">
-                 <div class="left-user3898">
-                     <a href="#"><img src="image/images.png" alt="Image"></a>
-                     <div class="imag-overlay39">
-                         <a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                     </div>
-                 </div>
-                 <span class="points-details938">
-                     <a href="#"><h5>Ahmed Hasan</h5></a>
-                <a href="#" class="designetion439">Pundit</a>
-                     <p>206 points</p>
-                 </span>
-                 
-                  </div>
-                  <hr>
-                  <div class="pints-wrapper">
-                 <div class="left-user3898">
-                     <a href="#"><img src="image/images.png" alt="Image"></a>
-                     <div class="imag-overlay39">
-                         <a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                     </div>
-                 </div>
-                 <span class="points-details938">
-                     <a href="#"><h5>Ahmed Hasan</h5></a>
-                <a href="#" class="designetion439">Pundit</a>
-                     <p>206 points</p>
-                 </span>
-                 
-                  </div>
-                  <hr>
-                  <div class="pints-wrapper">
-                 <div class="left-user3898">
-                     <a href="#"><img src="image/images.png" alt="Image"></a>
-                     <div class="imag-overlay39">
-                         <a href="#"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                     </div>
-                 </div>
-                 <span class="points-details938">
-                     <a href="#"><h5>Ahmed Hasan</h5></a>
-                <a href="#" class="designetion439">Pundit</a>
-                     <p>206 points</p>
-                 </span>
-                 
-                  </div>
-                  
-              </div>
-<!--               end of Highest points -->
 <!--          start tags part-->
 <div class="tags-part2398">
     <h4>Tags</h4>
@@ -338,30 +247,6 @@
     
 </div>
 <!--          End tags part-->
-<!--        start recent post  -->
-<div class="recent-post3290">
-    <h4>Recent Post</h4>
-    <div class="post-details021">
-        <a href="#"><h5>How much do web developers</h5></a>
-        <p>I am thinking of pursuing web developing as a career & was ...</p>
-        <small style="color: #848991">July 16, 2017</small>
-    </div>
-    <hr>
-        <div class="post-details021">
-        <a href="#"><h5>How much do web developers</h5></a>
-        <p>I am thinking of pursuing web developing as a career & was ...</p>
-        <small style="color: #848991">July 16, 2017</small>
-    </div>
-       <hr>
-        <div class="post-details021">
-        <a href="#"><h5>How much do web developers</h5></a>
-        <p>I am thinking of pursuing web developing as a career & was ...</p>
-        <small style="color: #848991">July 16, 2017</small>
-    </div>
-    
-    
-</div>
-<!--       end recent post    -->
           
            </aside>
             </div>
@@ -466,7 +351,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <p>Copyright 2017 Ask me | <strong>Sudo  Coder</strong></p>
+                <p>Copyright 2023 - Sex forums | <strong>Team 10 @ Telerik A48 Java Cohort</strong></p>
             </div>
              <div class="col-md-6">
               <div class="social-right2389">
@@ -483,9 +368,9 @@
     </div>
 </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/npm.js"></script>
+    <script src="../static/js/jquery-3.1.1.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/npm.js"></script>
 </body>
 
 </html>
