--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
     <title>Sex life & problems forum</title>
     <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
     <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-    <!-- <link href="css/animate.css" rel="stylesheet" type="text/css"> -->
+    <link href="../statis/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
     <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}">
 </head>
 
@@ -28,7 +28,7 @@
                     <ul>
                         <li><a href="mailto:telerikforums@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
                         <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                        <li><a href="logIn.html"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
+                        <li><a href="#" th:href="@{/logIn}"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
                     </ul>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                     <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                         <ul class="dropdown-menu animated zoomIn">
                             <li><a href="logIn.html">Login</a></li>
-                            <li><a href="contact_us.html"> Contact Us</a></li>
+                            <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contactus}"> Contact Us</a></li>
                             <li><a href="ask_question.html"> Ask Question </a></li>
                             <li><a href="post-deatils.html"> Post-Details </a></li>
                             <li><a href="user.html">All User</a></li>
@@ -91,7 +91,7 @@
                             <li><a href="#"> 404 </a></li>
                         </ul>
                     </li>
-                    <li><a href="contact_us.html">Contact us</a></li>
+                    <li><a href="contact_us">Contact us</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
