--- a/src/main/resources/templates/ask_question.html
+++ b/src/main/resources/templates/ask_question.html
@@ -27,7 +27,7 @@
                         <ul>
                             <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
                             <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                            <li><a href="logIn.html"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
+                            <li><a href="log_in.html"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
                         </ul>
                     </div>
                 </div>
@@ -78,10 +78,10 @@
                         </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="logIn.html">Login</a></li>
+                                <li><a href="log_in.html">Login</a></li>
                                 <li><a href="contact_us.html"> Contact Us</a></li>
                                 <li><a href="ask_question.html"> Ask Question </a></li>
-                                <li><a href="post-deatils.html"> Post-Details </a></li>
+                                <li><a href="post_details.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
                                 <li><a href="../templates/user_question.html"> User Question </a></li>
                                 <li><a href="category.html"> Category </a></li>
