--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -27,7 +27,7 @@
                         <ul>
                             <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
                             <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                            <li><a href="logIn.html"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
+                            <li><a href="log_in.html"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
                         </ul>
                     </div>
                 </div>
@@ -78,10 +78,10 @@
                         </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="logIn.html">Login</a></li>
+                                <li><a href="log_in.html">Login</a></li>
                                 <li><a href="contact_us.html"> Contact Us</a></li>
                                 <li><a href="ask_question.html"> Ask Question </a></li>
-                                <li><a href="post-deatils.html"> Post-Details </a></li>
+                                <li><a href="post_details.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
                                 <li><a href="../templates/user_question.html"> User Question </a></li>
                                 <li><a href="category.html"> Category </a></li>
@@ -121,7 +121,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank"> What is HTML?</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank"> What is HTML?</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -151,7 +151,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">What are Tags?</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">What are Tags?</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -180,7 +180,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">Do all HTML tags have an end tag?</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">Do all HTML tags have an end tag?</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -210,7 +210,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">How many types of heading does an HTML contain?</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">How many types of heading does an HTML contain?</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -239,7 +239,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">This is my first Question</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">This is my first Question</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -269,7 +269,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">This is my first Question</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">This is my first Question</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -298,7 +298,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">This is my first Question</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">This is my first Question</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -328,7 +328,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">This is my first Question</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">This is my first Question</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -357,7 +357,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">This is my first Question</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">This is my first Question</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
@@ -387,7 +387,7 @@
                                 <div class="col-md-9">
                                     <div class="right-description893">
                                         <div id="que-hedder2983">
-                                            <h3><a href="post-deatils.html" target="_blank">This is my first Question</a></h3> </div>
+                                            <h3><a href="post_details.html" target="_blank">This is my first Question</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
                                         </div>
