--- a/src/main/resources/templates/contact_us.html
+++ b/src/main/resources/templates/contact_us.html
@@ -51,7 +51,7 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                    <a class="navbar-brand" href="#"><img src="/assets/img/flogo.png" alt="FLogo"></a>
+                    <a class="navbar-brand" href="#" th:href="@{/}"><img src="/assets/img/flogo.png" alt="FLogo"></a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -76,10 +76,10 @@
                         </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                             <ul class="dropdown-menu animated zoomIn">
-                                <li><a href="logIn.html">Login</a></li>
+                                <li><a href="log_in.html">Login</a></li>
                                 <li><a href="contact_us.html"> Contact Us</a></li>
                                 <li><a href="ask_question.html"> Ask Question </a></li>
-                                <li><a href="post-deatils.html"> Post-Details </a></li>
+                                <li><a href="post_details.html"> Post-Details </a></li>
                                 <li><a href="user.html">All User</a></li>
                                 <li><a href="../templates/user_question.html"> User Question </a></li>
                                 <li><a href="category.html"> Category </a></li>
