Reworked the IndexView and the HomeMvcController to correctly display the top 10 most recent Topics.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -130,7 +130,7 @@
                     <section id="content1">
                         <!--Recent Question Content Section -->
 
-                        <div class="question-type2033" th:each="topic : ${topics}">
+                        <div class="question-type2033" th:each="topic : ${topicsByDate}">
                             <div class="row">
                                 <div class="col-md-1">
                                     <div class="left-user12923 left-user12923-repeat">
