Adding register working option for CreateNewUser

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1189,7 +1189,7 @@
                     </a>
                     <div class="rememberme">
                         <label>
-                            <input type="checkbox" checked="checked"> Remember Me</label> <a href="#" class="resbutton3892">Register</a> </div>
+                            <input type="checkbox" checked="checked"> Remember Me</label> <a href="#" th:href="@{/users/new}" class="resbutton3892">Register</a> </div>
                 </div>
                 <!--              highest part-->
                 <div class="highest-part302">
