--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
                     <ul>
                         <li><a href="mailto:telerikforums@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
                         <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
-                        <li><a href="#" th:href="@{/login}"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
+                        <li><a href="#" th:href="@{/auth/login}"><i class="fa fa-user" aria-hidden="true"></i>Login Area</a></li>
                     </ul>
                 </div>
             </div>
