--- a/src/main/resources/templates/delete-user.html
+++ b/src/main/resources/templates/delete-user.html
@@ -13,6 +13,6 @@
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete">
 </form>
-<a href="/users">Cancel</a>
+<a href="/">Cancel</a>
 </body>
 </html>
